<resources>
    <string name="app_name">Homey</string>
    <string name="header">Header</string>
    <string name="body">Body</string>
    <string name="footer">Footer</string>
    <string name="user_name">User Name:</string>
    <string name="email">Email:</string>
    <string name="completedTasks">Completed tasks:</string>
    <string name="activeTasks">Active tasks</string>
    <string name="profile_picture">ProfilePicture</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="hint_name">Full Name</string>
    <string name="button_login">Log in</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_forgot">REST PASSWORD</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_forgot_pass">Forgot my password.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="button_logout">Log Out</string>
    <string name="name">Full Name</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="pleaseEnterTheCredentials">Please enter the credentials!</string>
    <string name="successfullyLoggedIn">Successfully logged in!</string>
    <string name="loginCredentialsAreWrongPleaseTryAgain">Login credentials are wrong. Please try again!</string>
    <string name="emptyMessage">EmptyMessage</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="description">Description:</string>
    <string name="complete">Complete!</string>
    <string name="deleted_task">Delete!</string>
    <string name="creator">Creator:</string>
    <string name="take">Take!</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="group">Group:</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="submit">Submit</string>
    <string name="add_group">Add Group</string>
    <string name="add_task">Add Task</string>
    <string name="add_member">Add Member</string>
    <string name="group_name">Group name</string>
    <string name="create_group">Create Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="added">Added!</string>
    <string name="tasksNotUpdatedSuccessfully">The tasks haven\'t been updated successfully. An error occurred, try again</string>
    <string name="tasksUpdatedSuccessfully">The tasks have been updated successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Score:</string>
    <string name="task_name">Task Name</string>
</resources>
