<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.FragmentProfileInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textViewFirstNameLabel"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/first_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/email"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewCompletedTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/completedTasks"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewActiveTasks"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/activeTasks"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
