<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="12"
    android:orientation="vertical"
    tools:context="app.activities.EditProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/header" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageButton
            android:id="@+id/imageButtonUsersEditProfilePicture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/Transparent"
            android:clickable="true"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profilepicturetest" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:isScrollContainer="false">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUserNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="0dp"
                android:layout_row="1"
                android:padding="@dimen/text_margin"
                android:text="@string/user_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewUserNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:layout_row="1"
                android:ems="10"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="0dp"
                android:layout_row="2"
                android:padding="@dimen/text_margin"
                android:text="@string/email"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextEmailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:layout_row="2"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewFirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="0dp"
                android:layout_row="3"
                android:padding="@dimen/text_margin"
                android:text="@string/first_name"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextFirstNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:layout_row="3"
                android:inputType="text"
                android:ems="10"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewLastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="0dp"
                android:layout_row="4"
                android:ems="10"
                android:padding="@dimen/text_margin"
                android:text="@string/last_name"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextLastNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:layout_row="4"
                android:inputType="text"
                android:ems="10"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewDateOfBirthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="0dp"
                android:layout_row="5"
                android:ems="10"
                android:padding="@dimen/text_margin"
                android:text="@string/date_of_birth"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextDateOfBirthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:layout_row="5"
                android:inputType="date"
                android:ems="10"
                android:text=""
                android:textSize="12sp" />
        </GridLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.13">

        <include
            layout="@layout/navigation"
            android:layout_height="match_parent"
            android:layout_width="match_parent"></include>
    </LinearLayout>

</LinearLayout>
