<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="app.activities.AddGroupActivity"
    android:orientation="vertical">

    <include
        layout="@layout/header_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="123dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="33dp"
            android:background="@color/Transparent"
            android:adjustViewBounds="true"
            android:maxWidth="120dp"
            android:maxHeight="120dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_upload_image_group"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextGroupName"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="35dp" />

        <EditText
            android:id="@+id/editTextGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/group_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="35dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </HorizontalScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddGroupSubmit"
            android:layout_height="48dp"
            android:layout_width="0dp"
            android:layout_marginBottom="54dp"
            android:layout_weight="1"
            android:onClick="buttonAddGroup_onClick"
            android:text="@string/create_group"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="427dp" />

    </LinearLayout>

</LinearLayout>
