<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.homey.ProfileActivity">


    <LinearLayout
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/header" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/imageButtonUsersProfilePicture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/Transparent"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/profilepicturetest" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:isScrollContainer="false">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewUsersUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="0dp"
                    android:layout_row="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="0dp"
                    android:layout_row="2"
                    android:padding="@dimen/text_margin"
                    android:text="@string/email"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewUsersEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="0dp"
                    android:layout_row="2"
                    android:ems="10"
                    android:text=""
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="0dp"
                    android:layout_row="1"
                    android:padding="@dimen/text_margin"
                    android:text="@string/user_name"
                    android:textSize="12sp" />
            </GridLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:itemBackground="@color/colorPrimary"
                app:itemIconTint="@color/color_states"
                app:itemTextColor="@color/colorGray"
                app:layout_anchor="@id/imageButtonUsersProfilePicture"
                app:menu="@menu/buttons_menu" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="18dp"
        android:clickable="true"
        app:layout_anchor="@id/imageButtonUsersProfilePicture"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@android:drawable/ic_menu_edit" />
</android.support.design.widget.CoordinatorLayout>